css for section 5 (5.6.2020)

--- a/dev/scss/sections/_section-5.scss
+++ b/dev/scss/sections/_section-5.scss
@@ -7,7 +7,9 @@
     grid-template-areas: ". section-5 ." ;
 
     @include xl{
+        display: grid;
         grid-template-columns: auto 800px;
+        grid-template-areas: ". section-5-content .";
     }
 
     #section-5-content{
