--- a/dev/scss/styles.css
+++ b/dev/scss/styles.css
@@ -481,7 +481,10 @@ footer {
     #section-5 {
       display: grid;
       grid-template-columns: auto 800px;
-      grid-template-areas: ". section-5-content ."; } }
+      grid-template-areas: ". section-5 ."; } }
+  @media (min-width: 1200px) {
+    #section-5 #section-5-content {
+      grid-area: section-5; } }
   #section-5 #section-5-content {
     grid-area: section-5;
     display: grid;
