--- a/dev/scss/styles.css
+++ b/dev/scss/styles.css
@@ -485,6 +485,13 @@ footer {
   @media (min-width: 1200px) {
     #section-5 #section-5-content {
       grid-area: section-5; } }
+  #section-5 #section-5-text {
+    display: grid;
+    grid-template-columns: 10px auto 10px;
+    grid-template-areas: ".section-5-text ."; }
+    @media (min-width: 768px) {
+      #section-5 #section-5-text {
+        grid-area: section-5-text; } }
   #section-5 #section-5-content {
     grid-area: section-5;
     display: grid;
