--- a/dev/scss/sections/_section-4.scss
+++ b/dev/scss/sections/_section-4.scss
@@ -30,10 +30,9 @@
         }
 
         li{
-            img{
-                width: 100%;
-            }
-        }
+            background-size: cover;
+            background-position: center;
+            
 
         #g1{
             @include md{
