updating all images to 2500 px width

--- a/dev/scss/sections/_section-1.scss
+++ b/dev/scss/sections/_section-1.scss
@@ -3,7 +3,7 @@
 ============= */
 
 #section-1{
-    background-image: url(../'img/section-1/cartera-pp.png');
+    background-image: url(../'img/section-1/cartera.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
