background image-section 4

--- a/dev/scss/sections/_section-4.scss
+++ b/dev/scss/sections/_section-4.scss
@@ -51,6 +51,7 @@
         }
 
         #g2{
+            background-image: url(.."img/section-4/Crty.jpg");
             @include md{
                 grid-area: g2;
             }
