--- a/dev/scss/sections/_section-4.scss
+++ b/dev/scss/sections/_section-4.scss
@@ -58,6 +58,7 @@
         }
 
         #g3{
+            background-image: url(.."img/section-4/pant.jpg");
             @include md{
                 grid-area: g3;
                 }
