--- a/dev/scss/sections/_section-2.scss
+++ b/dev/scss/sections/_section-2.scss
@@ -4,10 +4,12 @@
 
 #section-2{
 
-    margin-top: 60px;
-    margin-right: 60px;
-    margin-bottom: 60px;
-    margin-left: 60px;
+    margin: 60px 20px;
+    margin: 60px 20px 100px;
+    // margin-top: 60px;
+    // margin-right: 60px;
+    // margin-bottom: 60px;
+    // margin-left: 60px;
 
     display: grid;
     grid-template-areas: ". section-2 .";
