--- a/dev/scss/sections/_section-2.scss
+++ b/dev/scss/sections/_section-2.scss
@@ -4,8 +4,11 @@
 
 #section-2{
 
-    margin: 60px 20px;
-    margin: 60px 20px 100px;
+    margin: 60px 0px;
+
+    // margin: 60px 20px;
+    // margin: 60px 20px 100px;
+
     // margin-top: 60px;
     // margin-right: 60px;
     // margin-bottom: 60px;
