--- a/dev/scss/base/_base.scss
+++ b/dev/scss/base/_base.scss
@@ -25,5 +25,15 @@ ul{
 }
 
 .content-spacing{
-    margin: 60px 0px;
-}
+    margin-top: 50px;
+    @include md{
+        margin-top: 55px;
+    }
+
+    @include lg{
+        margin-top: 700px;
+    }
+
+    @include xl{
+        margin-top: 100px;
+    }
