--- a/dev/scss/sections/_section-2.scss
+++ b/dev/scss/sections/_section-2.scss
@@ -49,6 +49,18 @@
                 grid-area: section-2-text;
             }
 
+            h2{
+                margin: 50px 0 30px
+            }
+
+            h3{
+            }
+
+            // img{
+            //     margin-bottom: 50px
+            // }
+
+
             #section-2-text-content{
                 grid-area: section-2-text;
             }
