image update section 5

--- a/dev/scss/sections/_section-2.scss
+++ b/dev/scss/sections/_section-2.scss
@@ -64,9 +64,11 @@
             h3{
             }
 
-            // img{
-            //     margin-bottom: 50px
-            // }
+            #section-2-text-content{
+                h2{
+                   margin top: ; 
+                }
+            }
 
 
             #section-2-text-content{
