footer background color

--- a/dev/scss/layout/_footer.scss
+++ b/dev/scss/layout/_footer.scss
@@ -2,6 +2,7 @@
     Footer
 ============= */
 footer{
+    background-color: #FF90B8;
     display: grid;
     grid-template-columns: 4% auto 4%;
     grid-template-areas: ". footer .";
