--- a/dev/scss/sections/_section-2.scss
+++ b/dev/scss/sections/_section-2.scss
@@ -66,7 +66,11 @@
 
             #section-2-text-content{
                 h2{
-                   margin top: ; 
+                   margin-top: 24px; 
+
+                   @include md{
+                       margin-top: 34px;
+                   }
                 }
             }
 
