--- a/dev/scss/layout/_footer.scss
+++ b/dev/scss/layout/_footer.scss
@@ -14,4 +14,10 @@ footer{
     #footer-content{
         grid-area: footer;
     }
+
+    div{
+        position: absolute;
+        top: -100px
+    }
+    
 }
