--- a/dev/scss/layout/_footer.scss
+++ b/dev/scss/layout/_footer.scss
@@ -16,8 +16,9 @@ footer{
     }
 
     div{
-        position: absolute;
-        top: -100px
-    }
+        margin-top: -50px;
+    //     position: absolute;
+    //     top: -100px
+    // }
     
 }
