--- a/dev/scss/base/_typography.scss
+++ b/dev/scss/base/_typography.scss
@@ -5,6 +5,9 @@ titles{
     font-family: 'Lacquer', cursive;
 }
 
+body{
+    font-family: 'DM Mono', monospace;
+}
 
 h1,h2,h3,h4,h5,h6,p,figure{
     margin: 0;
