updating fonts- css section 1

--- a/dev/scss/sections/_section-1.scss
+++ b/dev/scss/sections/_section-1.scss
@@ -22,8 +22,9 @@
     }
 
     h1{
-        font-weight: 900;
-        font-size: 100px;
+        // font-weight: 900;
+        font-size: 1em;
+        font-weight: 1rem;
     }
 }
 
