--- a/dev/scss/sections/_section-1.scss
+++ b/dev/scss/sections/_section-1.scss
@@ -23,9 +23,10 @@
 
     h1{
         // font-weight: 900;
-        font-size: 1em;
-        font-weight: 1rem;
-        font-size: 16px;
+        // font-size: 1em;
+        // font-weight: 1rem;
+        // font-size: 16px;
+        font-size: rem-calc(48);
     }
 }
 
