css font size and color update-section 1

--- a/dev/scss/sections/_section-1.scss
+++ b/dev/scss/sections/_section-1.scss
@@ -22,11 +22,8 @@
     }
 
     h1{
-        // font-weight: 900;
-        // font-size: 1em;
-        // font-weight: 1rem;
-        // font-size: 16px;
-        font-size: rem-calc(48);
+        font-size: rem-calc(40);
+        color: $hot-pink; 
     }
 }
 
