--- a/dev/scss/helpers/_variables.scss
+++ b/dev/scss/helpers/_variables.scss
@@ -18,9 +18,9 @@ $screen-xl-min: 1200px;
 // Colors
 $white: #fff;
 $black: #000;
-$light-pink: #FF90B8
-$hot-pink:  #F8035D
-$neon-green: #8ECF25
+$light-pink: #FF90B8;
+$hot-pink:  #F8035D;
+$neon-green: #8ECF25;
 
 
 
