--- a/dev/scss/sections/_section-4.scss
+++ b/dev/scss/sections/_section-4.scss
@@ -2,70 +2,69 @@
     Section 4
 ============= */
 
-#section-4{
+#section-4 {
     display: grid;
     grid-template-columns: 15px auto 15px;
-    grid-template-areas: ". section-4 ." ;
+    grid-template-areas: ". section-4 .";
 
-    @include xl{
+    @include xl {
         grid-template-columns: auto 800px auto;
     }
 
-  ul{
-      display: grid;
-      gap: 20px;
-      grid-area: section-4;
-      grid-template-areas: g2;
-      "g1"
-      "g1"
-      "g2"
-      "g3"
-      grid-template-rows: repeat(5, 324px);
+    ul {
+        display: grid;
+        gap: 20px;
+        grid-area: section-4;
+        grid-template-areas: 
+        "g2"
+        "g1"
+        "g1"
+        "g2"
+        "g3";
+        grid-template-rows: repeat(5, 324px);
 
-      @include md{
-        grid-template-columns: repeat(2, 1fr);
-        grid-template-areas:
-        "g1 g1"
-        "g2 g3"
-    }
+        @include md {
+            grid-template-columns: repeat(2, 1fr);
+            grid-template-areas:
+                "g1 g1"
+                "g2 g3";
+        }
 
-    @include lg{
-        grid-template-areas:
-        "g1 g2"
-        "g1 g3"
-    }
+        @include lg {
+            grid-template-areas:
+                "g1 g2"
+                "g1 g3";
+        }
 
- }
-
-        li{
+        li {
             background-size: cover;
             background-position: center;
-            
 
-        #g1{
-            background-image: url(.."img/section-4/Bella.jpg");
-            @include md{
-                grid-area: g1;
-            }
 
-        }
+            #g1 {
+                background-image: url("../img/section-4/Bella.jpg");
 
-        #g2{
-            background-image: url(.."img/section-4/Crty.jpg");
-            @include md{
-                grid-area: g2;
-            }
-        }
-
-        #g3{
-            background-image: url(.."img/section-4/pant.jpg");
-            @include md{
-                grid-area: g3;
+                @include md {
+                    grid-area: g1;
                 }
+
+            }
+
+            #g2 {
+                background-image: url("../img/section-4/Crty.jpg");
+
+                @include md {
+                    grid-area: g2;
+                }
+            }
+
+            #g3 {
+                background-image: url("../img/section-4/pant.jpg");
+
+                @include md {
+                    grid-area: g3;
+                }
+            }
         }
-
-
     }
-
-    
 }
