--- a/dev/scss/styles.css
+++ b/dev/scss/styles.css
@@ -400,11 +400,13 @@ footer {
     Section 1
 ============= */
 #section-1 {
-  background-image: url("../img/section-1/cartera.jpg");
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-  height: 50vh; }
+  display: grid;
+  grid-template-columns: 15px auto 15px;
+  grid-template-areas: ". section-1 ."; }
+  @media (min-width: 768px) {
+    #section-1 {
+      grid-template-columns: 10% auto 10%;
+      grid-template-areas: ". section-1 ."; } }
   @media (min-width: 768px) {
     #section-1 {
       height: 60vh; } }
@@ -418,7 +420,7 @@ footer {
     font-size: 2.5rem;
     color: #F8035D; }
     #section-1 h1 span {
-      color: yellow; }
+      color: #F8035D; }
 
 /* =============
     Section 2
