--- a/dev/scss/sections/_section-5.scss
+++ b/dev/scss/sections/_section-5.scss
@@ -25,13 +25,13 @@
         grid-template-areas: ".section-5-text .";
 
         @include md{
-            grid-area: section-5-text;
+            grid-area: ". section-5-text .";
         }
 
     }
 
     #section-5-content{
-        grid-area: section-5;
+        grid-area: ". section-5 .";
         display: grid;
         gap: 20px;
 
