--- a/dev/scss/styles.css
+++ b/dev/scss/styles.css
@@ -400,13 +400,11 @@ footer {
     Section 1
 ============= */
 #section-1 {
-  display: grid;
-  grid-template-columns: 15px auto 15px;
-  grid-template-areas: ". section-1 ."; }
-  @media (min-width: 768px) {
-    #section-1 {
-      grid-template-columns: 10% auto 10%;
-      grid-template-areas: ". section-1 ."; } }
+  background-image: url("../img/section-1/cartera.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  height: 50vh; }
   @media (min-width: 768px) {
     #section-1 {
       height: 60vh; } }
@@ -550,9 +548,9 @@ footer {
     grid-template-areas: ".section-5-text ."; }
     @media (min-width: 768px) {
       #section-5 #section-5-text {
-        grid-area: section-5-text; } }
+        grid-area: ". section-5-text ."; } }
   #section-5 #section-5-content {
-    grid-area: section-5;
+    grid-area: ". section-5 .";
     display: grid;
     gap: 20px; }
     #section-5 #section-5-content aside img {
