--- a/dev/scss/base/_base.scss
+++ b/dev/scss/base/_base.scss
@@ -9,31 +9,31 @@ ul{
     } 
 }
 
-// .show-for-md{
-//     display: none;
-//     @include md{
-//         display: block;
-//     }
-// }
+.show-for-md{
+    display: none;
+    @include md{
+        display: block;
+    }
+}
 
-// .show-for-lg{
-//     display: none;
-//     @include lg{
-//         display: block;
-//     }
-// }
+.show-for-lg{
+    display: none;
+    @include lg{
+        display: block;
+    }
+}
 
-// .content-spacing{
-//     margin-top: 50px;
-//     @include md{
-//         margin-top: 55px;
-//     }
+.content-spacing{
+    margin-top: 50px;
+    @include md{
+        margin-top: 55px;
+    }
 
-//     @include lg{
-//         margin-top: 700px;
-//     }
+    @include lg{
+        margin-top: 700px;
+    }
 
-//     @include xl{
-//         margin-top: 100px;
-//     }
-// }
+    @include xl{
+        margin-top: 100px;
+    }
+}
