Josh fixing my file after class: 5.12.2020

--- a/dev/scss/sections/_section-2.scss
+++ b/dev/scss/sections/_section-2.scss
@@ -82,12 +82,12 @@
 
         aside{
 
+            background-image: url("../img/section-2/camisa-y-pant.jpg");
+            background-size: cover;
+            height: 40vh;
+
             @include md{
                 grid-area: section-2-img;
-            }
-
-            img{
-                width: 100%;
             }
         }
     }
