--- a/dev/scss/sections/_section-3.scss
+++ b/dev/scss/sections/_section-3.scss
@@ -20,9 +20,9 @@
 
 
         aside{
-            img{
-                width: 100%;
-            }
+           background-image: url("../img/section-3/Recreo.png");
+           background-size: cover;
+           height: 100vh;
         }
     }
 }
