--- a/deploy/css/styles.css
+++ b/deploy/css/styles.css
@@ -393,8 +393,6 @@ footer {
       grid-template-columns: 20% auto 20%; } }
   footer #footer-content {
     grid-area: footer; }
-  footer div {
-    margin-top: -50px; }
 
 /* =============
     Section 1
@@ -417,8 +415,6 @@ footer {
   #section-1 h1 {
     font-size: 2.5rem;
     color: #F8035D; }
-    #section-1 h1 span {
-      color: yellow; }
 
 /* =============
     Section 2
@@ -462,12 +458,13 @@ footer {
           margin-top: 34px; } }
     #section-2 #section-2-content #section-2-text #section-2-text-content {
       grid-area: section-2-text; }
-  @media (min-width: 768px) {
-    #section-2 #section-2-content aside {
-      grid-area: section-2-img; } }
-  #section-2 #section-2-content aside img {
-    width: 100%; }
-
+  #section-2 #section-2-content aside {
+    background-image: url("../img/section-2/camisa-y-pant.jpg");
+    background-size: cover;
+    height: 40vh; }
+    @media (min-width: 768px) {
+      #section-2 #section-2-content aside {
+        grid-area: section-2-img; } }
 /* =============
     Section 3
 ============= */
@@ -483,8 +480,10 @@ footer {
     grid-area: section-3;
     display: grid;
     gap: 20px; }
-    #section-3 #section-3-content aside img {
-      width: 100%; }
+    #section-3 #section-3-content aside {
+      background-image: url("../img/section-3/Recreo.png");
+      background-size: cover;
+      height: 100vh; }
 
 /* =============
     Section 4
@@ -500,11 +499,12 @@ footer {
     display: grid;
     gap: 20px;
     grid-area: section-4;
-    grid-template-areas: "g2" "g1" "g1" "g2" "g3";
-    grid-template-rows: repeat(5, 324px); }
+    grid-template-areas: "g1" "g1" "g2" "g3";
+    grid-template-rows: repeat(4, 324px); }
     @media (min-width: 768px) {
       #section-4 ul {
         grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(2, 324px);
         grid-template-areas: "g1 g1" "g2 g3"; } }
     @media (min-width: 992px) {
       #section-4 ul {
@@ -512,21 +512,17 @@ footer {
     #section-4 ul li {
       background-size: cover;
       background-position: center; }
-      #section-4 ul li #g1 {
-        background-image: url("../img/section-4/Bella.jpg"); }
-        @media (min-width: 768px) {
-          #section-4 ul li #g1 {
-            grid-area: g1; } }
-      #section-4 ul li #g2 {
-        background-image: url("../img/section-4/Crty.jpg"); }
-        @media (min-width: 768px) {
-          #section-4 ul li #g2 {
-            grid-area: g2; } }
-      #section-4 ul li #g3 {
-        background-image: url("../img/section-4/pant.jpg"); }
-        @media (min-width: 768px) {
-          #section-4 ul li #g3 {
-            grid-area: g3; } }
+    #section-4 ul #g1 {
+      background-image: url("../img/section-4/Bella.jpg");
+      grid-area: g1; }
+    #section-4 ul #g2 {
+      background-image: url("../img/section-4/Crty.jpg");
+      background-position: center top;
+      grid-area: g2; }
+    #section-4 ul #g3 {
+      background-image: url("../img/section-4/pant.jpg");
+      grid-area: g3; }
+
 /* =============
     Section 5
 ============= */
@@ -536,22 +532,12 @@ footer {
   grid-template-areas: ". section-5 ."; }
   @media (min-width: 1200px) {
     #section-5 {
-      display: grid;
-      grid-template-columns: auto 800px;
-      grid-template-areas: ". section-5 ."; } }
-  @media (min-width: 1200px) {
-    #section-5 #section-5-content {
-      grid-area: section-5; } }
-  #section-5 #section-5-text {
-    display: grid;
-    grid-template-columns: 10px auto 10px;
-    grid-template-areas: ".section-5-text ."; }
-    @media (min-width: 768px) {
-      #section-5 #section-5-text {
-        grid-area: section-5-text; } }
+      grid-template-columns: auto 1200px auto; } }
   #section-5 #section-5-content {
-    grid-area: section-5;
-    display: grid;
-    gap: 20px; }
+    grid-area: section-5; }
+    @media (min-width: 768px) {
+      #section-5 #section-5-content {
+        display: grid;
+        grid-template-columns: 40% auto; } }
     #section-5 #section-5-content aside img {
       width: 100%; }
