--- a/dev/scss/layout/_footer.scss
+++ b/dev/scss/layout/_footer.scss
@@ -16,7 +16,7 @@ footer{
     }
 
     div{
-        margin-top: -50px;
+        // margin-top: -50px;
     //     position: absolute;
     //     top: -100px
     // }
