--- a/dev/scss/sections/_section-4.scss
+++ b/dev/scss/sections/_section-4.scss
@@ -16,15 +16,15 @@
         gap: 20px;
         grid-area: section-4;
         grid-template-areas: 
-        "g2"
         "g1"
         "g1"
         "g2"
         "g3";
-        grid-template-rows: repeat(5, 324px);
+        grid-template-rows: repeat(4, 324px);
 
         @include md {
             grid-template-columns: repeat(2, 1fr);
+            grid-template-rows: repeat(2, 324px);
             grid-template-areas:
                 "g1 g1"
                 "g2 g3";
@@ -39,32 +39,22 @@
         li {
             background-size: cover;
             background-position: center;
+        }
 
+        #g1 {
+            background-image: url("../img/section-4/Bella.jpg");
+            grid-area: g1;
+        }
 
-            #g1 {
-                background-image: url("../img/section-4/Bella.jpg");
+        #g2 {
+            background-image: url("../img/section-4/Crty.jpg");
+            background-position: center top;
+            grid-area: g2;
+        }
 
-                @include md {
-                    grid-area: g1;
-                }
-
-            }
-
-            #g2 {
-                background-image: url("../img/section-4/Crty.jpg");
-
-                @include md {
-                    grid-area: g2;
-                }
-            }
-
-            #g3 {
-                background-image: url("../img/section-4/pant.jpg");
-
-                @include md {
-                    grid-area: g3;
-                }
-            }
+        #g3 {
+            background-image: url("../img/section-4/pant.jpg");
+            grid-area: g3;
         }
     }
 }
