fixing alighment on img. Bella

--- a/dev/scss/sections/_section-4.scss
+++ b/dev/scss/sections/_section-4.scss
@@ -43,6 +43,7 @@
 
         #g1 {
             background-image: url("../img/section-4/Bella.jpg");
+            background-position: center top;
             grid-area: g1;
         }
 
