--- a/dev/scss/styles.css
+++ b/dev/scss/styles.css
@@ -514,6 +514,7 @@ footer {
       background-position: center; }
     #section-4 ul #g1 {
       background-image: url("../img/section-4/Bella.jpg");
+      background-position: center top;
       grid-area: g1; }
     #section-4 ul #g2 {
       background-image: url("../img/section-4/Crty.jpg");
