--- a/dev/scss/sections/_section-2.scss
+++ b/dev/scss/sections/_section-2.scss
@@ -72,7 +72,7 @@
 
             background-image: url("../img/section-2/camisa-y-pant.jpg");
             background-size: cover;
-            // background-position: center top;
+            background-position: center right;
             height: 40vh;
 
             @include md{
