--- a/dev/scss/sections/_section-5.scss
+++ b/dev/scss/sections/_section-5.scss
@@ -19,10 +19,28 @@
             grid-template-columns: 40% auto;
         }
 
-        aside{
-            img{
-                width: 100%;
-            }
+        // aside{
+        //     img{
+        //         width: 100%;
+        //     }
+
+
+        aside {
+            background-size: cover;
+            background-position: center;
+        }
+        
+        #section-5-content{
+            background-image: url("../img/section-5/camisa.jpg");
+            background-position: center top;
+           
+        }
+            
+        
+
+
+
+
         }
     }
 }
